<resources>
    <string name="app_name">Patitas</string>
    <string name="flechita"> > </string>
    <string name="contraseña">Contraseña</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="registrarse">Registrarse</string>
    <string name="aceptoCondiciones">\t Acepto los términos y condiciones</string>
    <string name="leerCondiciones">Leer condiciones de servicio y política \n de privacidad de Patitas.</string>
    <string name="recordarUsuario">\t Recordar usuario</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="continuarCondiciones">Al continuar, aceptas las condiciones de servicio y la política de privacidad de Patitas.</string>
    <string name="terminosYCondiciones">Terminos y Condiciones</string>

    <string name="Condiciones">Estos Términos y Condiciones de Uso regulan las reglas a que se sujeta la utilización de la APP
____________________ (en adelante, la APP), que puede descargarse desde el dominio
_______________________________ La descarga o utilización de la APP atribuye la condición de
Usuario a quien lo haga e implica la aceptación de todas las condiciones incluidas en este documento
y en la Política de Privacidad y el Aviso Legal de dicha página Web. El Usuario debería leer estas
condiciones cada vez que utilice la APP, ya que podrían ser modificadas en lo sucesivo.
2. Únicamente los Usuarios expresamente autorizados por XXXEMPRESAXXX podrán acceder a la
descarga y uso de la APP. Los Usuarios que no dispongan de autorización, no podrán acceder a dicho
contenido.
3. Cargos: eres responsable del pago de todos los costes o gastos en los que incurras como resultado de
descargar y usar la Aplicación de XXXEMPRESAXXX, incluido cualquier cargo de red de operador o
itinerancia. Consulta con tu proveedor de servicios los detalles al respecto.
4. Estadísticas anónimas: XXXEMPRESAXXX se reserva el derecho a realizar un seguimiento de tu
actividad en la Aplicación de y a informar de ello a nuestros proveedores de servicios estadísticos de
terceros. Todo ello de forma anónima.
5. Protección de tu información personal: queremos ayudarte a llevar a cabo todos los pasos necesarios
para proteger tu privacidad e información. Consulta la Política de privacidad de XXXEMPRESAXXX y los
avisos sobre privacidad de la Aplicación para conocer qué tipo de información recopilamos y las
medidas que tomamos para proteger tu información personal.
6. Queda prohibido alterar o modificar ninguna parte de la APP a de los contenidas de la misma, eludir,
desactivar o manipular de cualquier otra forma (o tratar de eludir, desactivar o manipular) las
funciones de seguridad u otras funciones del programa y utilizar la APP o sus contenidos para un fin
comercial o publicitario. Queda prohibido el uso de la APP con la finalidad de lesionar bienes,
derechos o intereses de XXXEMPRESAXXX o de terceros. Queda igualmente prohibido realizar
cualquier otro uso que altere, dañe o inutilice las redes, servidores, equipos, productos y programas
informáticos de XXXEMPRESAXXX o de terceros.
7. La APP y sus contenidos (textos, fotografías, gráficos, imágenes, tecnología, software, links,
contenidos, diseño gráfico, código fuente, etc.), así como las marcas y demás signos distintivos son
propiedad de XXXEMPRESAXXX o de terceros, no adquiriendo el Usuario ningún derecho sobre ellos
por el mero uso de la APP. El Usuario, deberá abstenerse de:
a) Reproducir, copiar, distribuir, poner a disposición de terceros, comunicar públicamente,
transformar o modificar la APP o sus contenidos, salvo en los casos contemplados en la ley o
expresamente autorizados por XXXEMPRESAXXX o por el titular de dichos derechos.
b) Reproducir o copiar para uso privado la APP o sus contenidos, así como comunicarlos
públicamente o ponerlos a disposición de terceros cuando ello conlleve su reproducción.
c) Extraer o reutilizar todo o parte sustancial de los contenidos integrantes de la APP.
8. Con sujeción a las condiciones establecidas en el apartado anterior, XXXEMPRESAXXX concede al
Usuario una licencia de uso de la APP, no exclusiva, gratuita, para uso personal, circunscrita al
territorio nacional y con carácter indefinido. Dicha licencia se concede también en los mismos
términos con respecto a las actualizaciones y mejoras que se realizasen en la aplicación. Dichas
licencias de uso podrán ser revocadas por XXXEMPRESAXXX unilateralmente en cualquier memento,
mediante la mera notificación al Usuario.
9. Corresponde al Usuario, en todo caso, disponer de herramientas adecuadas para la detección y
desinfección de programas maliciosos o cualquier otro elemento informático dañino.
XXXEMPRESAXXX no se responsabiliza de los daños producidos a equipos informáticos durante el uso
de la APP. Igualmente, XXXEMPRESAXXX no será responsable de los daños producidos a los Usuarios
cuando dichos daños tengan su origen en fallos o desconexiones en las redes de telecomunicaciones
que interrumpan el servicio.
10. IMPORTANTE: Podemos, sin que esto suponga ninguna obligación contigo, modificar estas
Condiciones de uso sin avisar en cualquier memento. Si continúas utilizando la aplicación una vez
realizada cualquier modificación en estas Condiciones de uso, esa utilización continuada constituirá la
aceptación por tu parte de tales modificaciones. Si no aceptas estas condiciones de uso ni aceptas
quedar sujeto a ellas, no debes utilizar la aplicación ni descargar o utilizar cualquier software
relacionado. El uso que hagas de la aplicación queda bajo tu única responsabilidad. No tenemos
responsabilidad alguna por la eliminación o la incapacidad de almacenar o trasmitir cualquier
contenido u otra información mantenida o trasmitida por la aplicación. No somos responsables de la
precisión o la fiabilidad de cualquier información o consejo trasmitidos a través de la aplicación.
Podemos, en cualquier memento, limitar o interrumpir tu uso a nuestra única discreción. Hasta el
máximo que permite la ley, en ningún caso seremos responsables por cualquier pérdida o daño
relacionados.
11. El Usuario se compromete a hacer un uso correcto de la APP, de conformidad con la Ley, con los
presentes Términos y Condiciones de Uso y con las demás reglamentos e instrucciones que, en su
caso, pudieran ser de aplicación El Usuario responderá frente a XXXEMPRESAXXX y frente a terceros
de cualesquiera daños o perjuicios que pudieran causarse por incumplimiento de estas obligaciones.
12. Estos Términos y Condiciones de Uso se rigen íntegramente por la legislación española. Para la
resolución de cualquier conflicto relativo a su interpretación o aplicación, el Usuario se somete
expresamente a la jurisdicción de los tribunales de _____________________________ (España).</string>
    <string name="logo">logo</string>
    <string name="boton_listado">Listado gatitos</string>
    <string name="boton_Refugios">Listado de Refugios</string>
    <string name="refugio">Refugio</string>
    <string name="pDireccion">Dirección: </string>
    <string name="pRed">Red: </string>
    <string name="gatitos">Gatitos</string>
    <string name="refugios">Refugios</string>
    <string name="sp_credenciales">SP_CREDENCIALES</string>
    <string name="nombre_usuario">NOMBRE</string>
    <string name="password_usuario">PASSWORD</string>
    <string name="volver">volver</string>
    <string name="gato">Gato</string>
    <string name="pRaza">Raza: </string>
    <string name="pFriendly">Amoroso: </string>
    <string name="pSexo">Sexo: </string>
    <string name="pAtencion">Atencion requerida: </string>
    <string name="pTiraPelo">Peludo: </string>
    <string name="pAmigable">Amigable con animales: </string>
    <string name="usuarios">Usuarios</string>
    <string name="continuar">Continuar</string>
    <string name="ingresecodigoemail">Ingrese el código enviado a su email</string>
    <string name="guionbajo">-</string>
    <string name="espacio"> </string>
    <string name="informacion">Siendo 1 el menor nivel y 5 el máximo</string>


</resources>