<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="592dp"
        android:background="@drawable/roundstyle"

        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="8pt"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/reLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:layout_gravity="center"
            android:background="@drawable/icotoolbar"
            android:contentDescription="@string/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/reNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginVertical="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                android:autofillHints="name"
                android:background="@drawable/roundstyle"
                android:backgroundTint="#BFC6CC"
                android:hint="@string/nombre"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/reApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginVertical="10dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"

                android:autofillHints="name"
                android:background="@drawable/roundstyle"
                android:backgroundTint="#BFC6CC"
                android:hint="@string/apellidos"
                android:inputType="text"
                android:padding="15dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/reEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginVertical="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/roundstyle"
            android:backgroundTint="#BFC6CC"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <EditText
            android:id="@+id/reContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:autofillHints="password"
            android:background="@drawable/roundstyle"
            android:backgroundTint="#BFC6CC"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:padding="15dp" />

        <Button
            android:id="@+id/reRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/beige"
            android:text="@string/registrarse" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/reAceptar"
                android:button="@null"
                android:drawableStart="@drawable/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/aceptoCondiciones"
                android:textAlignment="textStart"
                />

            <TextView
                android:id="@+id/reLeerCondiciones"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginVertical="5pt"
                android:background="@color/white"
                android:paddingBottom="20dp"
                android:text="@string/leerCondiciones"
                android:textAlignment="center"
                android:textColor="@color/marronOscuro"

                android:textSize="14sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>