<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt">

            <TextView
                android:id="@+id/palabraRaza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pRaza"
                android:textColor="#433E3E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txRaza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#433E3E"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:background="@drawable/roundstyle"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/palabraFriendly"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pFriendly"
                android:textColor="#433E3E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txFriendly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#433E3E"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundstyle">

            <TextView
                android:id="@+id/palabraSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pSexo"
                android:textColor="#433E3E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#433E3E"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnFragmento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/flechita"
        android:textSize="20sp">
    </Button>

</LinearLayout>