<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/rosita">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/palabraAtencion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pAtencion"
                android:textColor="@color/grisMasOscuro"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txAtencion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grisOscuro"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:background="@drawable/roundstyle"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/palabraTiraPelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pTiraPelo"
                android:textColor="@color/grisMasOscuro"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txTiraPelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grisOscuro"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:background="@drawable/roundstyle">

            <TextView
                android:id="@+id/palabraAmigable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pAmigable"
                android:textColor="@color/grisMasOscuro"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txAmigable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grisOscuro"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundstyle">

        <TextView
            android:id="@+id/txInformacion"
            android:text="@string/informacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/grisMasOscuro"
            android:textSize="15sp"
            android:textStyle="italic"
            android:layout_marginVertical="10dp"/>
    </LinearLayout>

</LinearLayout>